# web_chess

./: Cargo.toml  LICENSE
api/: Cargo.toml
api/src/: join.rs
assets/: chess_board.scss  index.css
frontend/: Cargo.toml  index.html
frontend/public/: chess_board.css  index.css
frontend/src/: board_provider.rs  chess_board.rs  lib.rs  main.rs
frontend/src/chess_board/: piece.rs
frontend/src/routes/: home.rs  play.rs
server/: Cargo.toml
server/src/: board_state.rs  code_gen.rs  fallback.rs  game.rs  main.rs  participant.rs
server/src/participant/: web_player.rs
server/src/routes/: board.rs
styles/: chess_board.css  index.css  style.scss
