[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chb_chess = {git = "https://github.com/CHB2025/chess.git"}
leptos = "0.2.5"
leptos_router = { version = "0.2.5", features = ["hydrate"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
tracing = "0.1.37"
leptos_meta = { version = "0.2.5", features = ["hydrate"] }
futures = "0.3.28"
async-std = "1.12.0"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "HtmlDivElement",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]
