[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chb_chess = {git = "https://github.com/CHB2025/chess.git", features = ["serde"]}
leptos = { version = "0.2.5", default-features = false, features = ["serde"] }
leptos_router = { version = "0.2.5", default-features = false }
leptos_meta = { version = "0.2.5", default-features = false }
leptos_axum = { version = "0.2.5", optional = true }
wasm-bindgen = "0.2"
js-sys = "0.3"
tracing = "0.1.37"
futures = "0.3.28"
async-std = "1.12.0"
cfg-if = "1.0.0"
console_log = "1.0.0"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
gloo-net = { version = "0.2.6", features = ["serde", "json", "http"] }
api = { path = "../api" }
serde_json = "1.0.96"

[dependencies.web-sys]
version = "0.3.61"
features = [
    "HtmlDivElement",
    "BinaryType",
    "Blob",
    "ErrorEvent",
    "FileReader",
    "MessageEvent",
    "ProgressEvent",
    "WebSocket",
]

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "chb_chess/wasm"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
