[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
chb_chess = {git = "https://github.com/CHB2025/chess.git", features = ["serde"]}
axum = { version = "0.6.15", features = ["ws"] }
leptos = { version = "0.2.5", default-features = false, features = ["ssr"] }
leptos_axum = "0.2.5"
leptos_router = { version = "0.2.5", default-features = false, features = ["ssr"] }
leptos_meta = { version = "0.2.5", default-features = false, features = ["ssr"] }
frontend = { path = "../frontend", default-features = false, features = ["ssr"] }
serde = "1.0"
tokio = { version = "1.27.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs"] }
futures = "0.3.28"
console_error_panic_hook = "0.1.7"
log = "0.4.17"
simple_logger = "4.1.0"
rand = "0.8.5"
